--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vuito",
   "version": "0.0.1",
-  "description": "Simple, lightweight, template-based validation for Vue.JS",
+  "description": "Simple, lightweight, full-stack, template-based validation.",
   "main": "lib/cjs.index.js",
   "module": "lib/esm/index.js",
   "scripts": {
