--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vuito",
   "version": "0.0.1",
   "description": "Simple, lightweight, full-stack, template-based validation.",
-  "main": "lib/cjs.index.js",
+  "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
   "scripts": {
     "test": "jest",
