--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "vuito",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Simple, lightweight, full-stack, template-based validation.",
-  "main": "lib/cjs/index.js",
-  "module": "lib/esm/index.js",
+  "main": "lib/index.js",
+  "module": "lib/index.esm.js",
+  "types": "lib/types/index.d.ts",
+  "files": ["lib"],
   "scripts": {
     "test": "jest",
     "lint:fix": "eslint --fix . --ext \".ts\"",
     "lint": "eslint . --ext \".ts\"",
     "build:all": "npm run build:module && npm run build",
     "build:module": "tsc -p ./tsconfig.module.json",
-    "build": "tsc"
+    "build": "tsc && rollup -c"
   },
   "repository": {
     "type": "git",
@@ -28,6 +30,8 @@
   },
   "homepage": "https://github.com/mathix420/vuito#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
     "@types/jest": "^26.0.21",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
@@ -36,6 +40,9 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "rollup": "^2.42.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
   },
