--- a/tsconfig copy.json
+++ b/tsconfig copy.json
@@ -12,16 +12,13 @@
         "outDir": "./lib",
         "rootDir": "./src",
         "strict": true,
-        "types": ["jest", "node"],
-        "noEmit": true,
-        "resolveJsonModule": true
+        "types": ["jest", "node"]
     },
     "include": [
         "src"
     ],
     "exclude": [
         "node_modules",
-        "**/tests/*",
-        "lib"
+        "**/tests/*"
     ]
 }
