--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,6 @@ jobs:
       - uses: actions/setup-node@v2.1.5
         with:
           node-version: 12.x
-      - run: npm i --no-optional
+      - run: npm i
       - run: npm run build
       - run: npm run test
