--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "url": "https://github.com/mathix420/vuito/issues"
   },
   "homepage": "https://github.com/mathix420/vuito#readme",
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^26.0.21",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
@@ -40,9 +41,7 @@
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
-    "typescript": "^4.2.3"
-  },
-  "optionalDependencies": {
+    "typescript": "^4.2.3",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "rollup": "^2.42.1",
