--- a/vue/package.json
+++ b/vue/package.json
@@ -24,5 +24,5 @@
   "bugs": {
     "url": "https://github.com/mathix420/vuito/issues"
   },
-  "homepage": "https://github.com/mathix420/vuito/tree/master/vue#readme"
+  "homepage": "https://github.com/mathix420/vuito#Vue.js%20Mixin"
 }
