--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple, lightweight, full-stack, template-based validation.",
   "main": "lib/vuito.cjs.js",
   "module": "lib/vuito.esm.js",
-  "types": "lib/types/index.d.ts",
+  "types": "lib/index.d.ts",
   "sideEffects": false,
   "files": [
     "lib"
