--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "test": "jest",
     "lint:fix": "eslint --fix . --ext \".ts\"",
     "lint": "eslint . --ext \".ts\"",
-    "build:ci": "tsc && rollup -c",
-    "build": "tsc"
+    "build": "rollup -c",
+    "dev": "rollup -cw"
   },
   "repository": {
     "type": "git",
