--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,6 @@ jobs:
         registry-url: 'https://registry.npmjs.org'
     - run: npm install
     - run: npm run build
-    - run: npm publish
+    - run: npm publish lib
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
