--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuito",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Simple, lightweight, isomorphic, template-based validation library.",
   "main": "vuito.cjs.js",
   "module": "vuito.esm.js",
@@ -11,6 +11,7 @@
   ],
   "scripts": {
     "test": "jest",
+    "test:ci": "jest --coverage",
     "postbuild": "cp LICENSE README.md package.json lib/",
     "lint:fix": "eslint --fix . --ext \".ts\"",
     "lint": "eslint . --ext \".ts\"",
