--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "editor.codeActionsOnSave": {
-        "source.fixAll": true
-    }
+        "source.fixAll": true,
+    },
+    "editor.rulers": [100]
 }
