--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: Publish Package
 
 on:
   release:
-    types: [published, edited, released]
+    types: [created, edited]
   workflow_dispatch:
 
 jobs:
