[TEST] pre releases

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -3,6 +3,7 @@ name: Pre Release
 on:
   push:
     branches: [ master ]
+    # paths: [ src ]
 
 jobs:
   pre-release:
@@ -13,6 +14,6 @@ jobs:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "beta"
+          # automatic_release_tag: "beta"
           prerelease: true
           title: "Development Release"
