[UPDATE] release workflow

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "editor.codeActionsOnSave": {
         "source.fixAll": true,
     },
-    "editor.rulers": [100]
+    "editor.rulers": [100],
+    "git.pullTags": true
 }
