--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vuito-monorepo",
   "private": true,
+  "workspaces": ["./packages/*"],
   "devDependencies": {
     "lerna": "^4.0.0"
   },
