--- a/packages/vuito/package.json
+++ b/packages/vuito/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "jest",
     "test:ci": "jest --coverage",
-    "postbuild": "cp ../../LICENSE ../../README.md package.json lib/",
+    "postbuild": "cp LICENSE README.md package.json lib/",
     "lint:fix": "eslint --fix . --ext \".ts\"",
     "lint": "eslint . --ext \".ts\"",
     "build": "rollup -c",
