[UPDATE] vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "source.fixAll": true,
     },
     "editor.rulers": [100],
-    "git.pullTags": true
+    "git.pullTags": true,
+    "git.fetchOnPull": true
 }
