--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,12 @@
     "packages/*"
   ],
   "version": "1.1.6",
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "command": {
+    "version": {
+      "ignoreChanges": [
+        "**/*.md"
+      ]
+    }
+  }
 }
