--- a/package.json
+++ b/package.json
@@ -14,5 +14,17 @@
   "scripts": {
     "build": "lerna run build",
     "test": "lerna run test"
+  },
+  "dependencies": {
+    "@types/jest": "^26.0.24",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^26.6.3",
+    "prettier": "^2.3.2",
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.3.5"
   }
 }
