--- a/packages/vuito/package.json
+++ b/packages/vuito/package.json
@@ -37,22 +37,12 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
-    "@types/jest": "^26.0.21",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "jest": "^26.6.3",
-    "prettier": "^2.2.1",
     "rollup": "^2.42.1",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-rename-node-modules": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "ts-jest": "^26.5.4",
-    "typescript": "^4.2.3"
+    "rollup-plugin-typescript2": "^0.30.0"
   },
   "jest": {
     "preset": "ts-jest"
