--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vuito/vue",
-  "version": "1.1.8-alpha.0",
+  "version": "1.1.8-alpha.1",
   "description": "Vue.js mixin wrapper for vuito validation library.",
   "main": "index.js",
   "types": "index.d.ts",
@@ -27,6 +27,6 @@
   "homepage": "https://github.com/mathix420/vuito#vuejs-mixin",
   "peerDependencies": {
     "vue": "^2.0.0",
-    "vuito": "^1.1.6"
+    "vuito": "*"
   }
 }
