--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "1.1.8-alpha.1",
+  "version": "1.2.0",
   "useWorkspaces": true,
   "command": {
     "version": {
