--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,8 @@ jobs:
         node-version: '12.x'
         registry-url: 'https://registry.npmjs.org'
     - run: npm install
-    - run: npm run build
-    - run: cd lib; npm publish
+    - run: lerna bootstrap
+    - run: lerna run build
+    - run: lerna publish from-git
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
