--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           node-version: 12.x
 
+      - run: npm -V
+
       - run: npm i
       - run: lerna exec npm install
       - run: lerna bootstrap --no-ci
