[FIX] update npm to 7.x

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,9 +16,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2.1.5
         with:
-          node-version: 12.x
-
-      - run: npm -V
+          node-version: '15.x'
 
       - run: npm i
       - run: lerna exec npm install
