--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,10 +19,12 @@ jobs:
           node-version: '15.x'
 
       - run: npm i
-      - run: lerna exec npm install
-      - run: lerna bootstrap --no-ci
+      - run: lerna bootstrap
       - run: lerna run test:ci
 
       - uses: paambaati/codeclimate-action@v2.7.5
         env:
           CC_TEST_REPORTER_ID: d7cc2b984737376a118b540a6aa72447f3fc6fbb705988584b33dd0c8fbcb856
+        with:
+          coverageLocations: |
+            ${{github.workspace}}/packages/vuito/coverage/lcov.info:lcov
