[UPDATE] new npm version

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "engines": {
     "node": ">=12",
-    "npm": "7.x"
+    "npm": ">=7.x"
   },
   "devDependencies": {
     "lerna": "^4.0.0"
