--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
-    "@vuito/vue": "*",
+    "@vuito/vue": "file:./packages/vue",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
@@ -27,6 +27,6 @@
     "prettier": "^2.3.2",
     "ts-jest": "^26.5.6",
     "typescript": "^4.3.5",
-    "vuito": "*"
+    "vuito": "file:./packages/vuito"
   }
 }
