--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -28,6 +28,6 @@
   "homepage": "https://github.com/mathix420/vuito#vuejs-mixin",
   "peerDependencies": {
     "vue": ">=2.0.0",
-    "vuito": "2.0.1"
+    "vuito": "*"
   }
 }
