--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    if: "!github.event.release.prerelease"
+    if: '!github.event.release.prerelease'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
