--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,16 +13,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2.1.5
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: '15.x'
+          node-version: 'lts/*'
 
       - run: npm i
       - run: lerna bootstrap
       - run: lerna run test:ci
 
-      - uses: paambaati/codeclimate-action@v2.7.5
+      - uses: paambaati/codeclimate-action@v5
         env:
           CC_TEST_REPORTER_ID: d7cc2b984737376a118b540a6aa72447f3fc6fbb705988584b33dd0c8fbcb856
         with:
