--- a/packages/vuito/package.json
+++ b/packages/vuito/package.json
@@ -17,8 +17,8 @@
     "test:ci": "jest --coverage",
     "lint:fix": "eslint --fix . --ext \".ts\"",
     "lint": "eslint . --ext \".ts\"",
-    "build": "rollup -c",
-    "dev": "rollup -cw"
+    "build": "rollup -c --bundleConfigAsCjs",
+    "dev": "rollup -cw --bundleConfigAsCjs"
   },
   "repository": {
     "type": "git",
@@ -39,14 +39,14 @@
   },
   "homepage": "https://github.com/mathix420/vuito#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "rollup": "^2.42.1",
+    "@rollup/plugin-commonjs": "^25.0.3",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
+    "rollup": "^2.79.1",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-rename-node-modules": "^1.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0"
+    "rollup-plugin-rename-node-modules": "^1.3.1",
+    "rollup-plugin-typescript2": "^0.35.0"
   },
   "jest": {
     "preset": "ts-jest"
