--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,13 @@
 {
-  "packages": ["packages/*"],
-  "version": "2.0.4",
+  "packages": [
+    "packages/*"
+  ],
+  "version": "2.0.5",
   "command": {
     "version": {
-      "ignoreChanges": ["**/*.md"]
+      "ignoreChanges": [
+        "**/*.md"
+      ]
     }
   }
 }
