--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,6 @@ jobs:
         registry-url: 'https://registry.npmjs.org'
     - run: npm install
     - run: lerna run build
-    - run: lerna publish from-git
+    - run: lerna publish from-git -y
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
