--- a/packages/vuito/package.json
+++ b/packages/vuito/package.json
@@ -7,10 +7,14 @@
   "types": "lib/vuito.d.ts",
   "sideEffects": false,
   "files": [
-    "*"
+    "lib/",
+    "src/",
+    "tsconfig.json"
   ],
   "scripts": {
     "test": "jest",
+    "prepublishOnly": "npm run postpublish && cp ../../README.md ../../LICENSE .",
+    "postpublish": "rm -f README.md LICENSE",
     "test:ci": "jest --coverage",
     "lint:fix": "eslint --fix . --ext \".ts\"",
     "lint": "eslint . --ext \".ts\"",
@@ -36,14 +40,14 @@
   },
   "homepage": "https://github.com/mathix420/vuito#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.3",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "rollup": "^2.79.1",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-rename-node-modules": "^1.3.1",
-    "rollup-plugin-typescript2": "^0.35.0"
+    "rollup-plugin-typescript2": "^0.36.0"
   },
   "jest": {
     "preset": "ts-jest"
