--- a/lerna.json
+++ b/lerna.json
@@ -1,13 +1,9 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "2.0.6",
+  "packages": ["packages/*"],
+  "version": "2.0.7",
   "command": {
     "version": {
-      "ignoreChanges": [
-        "**/*.md"
-      ]
+      "ignoreChanges": ["**/*.md"]
     }
   }
 }
