--- a/docs/package.json
+++ b/docs/package.json
@@ -13,9 +13,9 @@
     "@nuxt-themes/docus": "^1.15.0",
     "@nuxt/devtools": "^1.0.3",
     "@nuxt/eslint-config": "^0.2.0",
+    "@nuxthq/studio": "^1.0.5",
     "@types/node": "^20.9.4",
     "eslint": "^8.54.0",
-    "nuxt": "^3.8.2",
-    "vuito": "^2.0.6"
+    "nuxt": "^3.8.2"
   }
 }
