--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vuito-monorepo",
   "private": true,
   "workspaces": [
-    "./packages/*"
+    "packages/*"
   ],
   "engines": {
     "node": ">=12",
@@ -23,6 +23,7 @@
   },
   "scripts": {
     "build": "lerna run build",
+    "bump": "lerna version",
     "test": "lerna run test"
   },
   "dependencies": {
