--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": true,
-        "source.fixAll": true,
+        "source.fixAll.eslint": "explicit",
+        "source.fixAll": "explicit"
     },
     "editor.rulers": [100],
     "git.pullTags": true,
