chore(master): release 2.1.0

--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
   "dependencies": {
     "@vuito/vue": "file:./packages/vue",
     "vuito": "file:./packages/vuito"
-  }
+  },
+  "version": "2.1.0"
 }
